--- a/index.html
+++ b/index.html
@@ -112,6 +112,48 @@
           "Cicak Batu",
           "Rantai Besi",
           "Tomket",
+          "Kucing Hitam",
+          "Semut Merah",
+          "Kupu-kupu Malam",
+          "Belalang Hijau",
+          "Ikan Mas",
+          "Buaya Darat",
+          "Monyet Ekor Panjang",
+          "Kura-kura Ninja",
+          "Kelelawar Malam",
+          "Bebek Peking",
+          "Ayam Kate",
+          "Sapi Perah",
+          "Kerbau Bule",
+          "Anjing Laut",
+          "Kucing Garong",
+          "Katak Pohon",
+          "Ikan Paus",
+          "Harimau Sumatra",
+          "Singa Afrika",
+          "Gajah Afrika",
+          "Jerapah Tinggi",
+          "Badak Bercula Satu",
+          "Ular Piton",
+          "Iguana Hijau",
+          "Burung Merak",
+          "Burung Elang",
+          "Kanguru Australia",
+          "Pinguin Kutub",
+          "Beruang Kutub",
+          "Kucing Anggora",
+          "Anjing Husky",
+          "Rusa Jawa",
+          "Kijang Emas",
+          "Macan Tutul",
+          "Serigala Abu-abu",
+          "Lumba-lumba Biru",
+          "Hiu Putih",
+          "Paus Biru",
+          "Cendrawasih",
+          "Burung Hantu",
+          "Buaya Muara",
+          "Gajah Sumatra",
         ];
         var randomKhodam =
           khodamList[Math.floor(Math.random() * khodamList.length)];
